<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">yelperHelper</string>
    <string name="action_settings">Settings</string>
    <string name="walk">Walk</string>
    <string name="bike">Bike</string>
    <string name="drive">Drive</string>
    <string name="any">Any</string>
    <string name="disatance">Distance</string>
    <string name="priceText">How much will your appetite pay for?</string>
    <string name="onedollar">$</string>
    <string name="twodollar">$$</string>
    <string name="threedollar">$$$+</string>
    <string name="onlyOpen">Show only open now</string>
    <string name="findit">Find it from</string>
    <string name="about">How far will your appetite take you?</string>
    <string name="title_activity_picture_grid">PIctureGridActivity</string>
    <string name="yelper_helper">Yelper Helper</string>
    <string name="title_activity_picture">PictureActivity</string>
    <string name="title_activity_result_fragment">ResultFragment</string>
    <string name="title_activity_details">Details</string>

</resources>