<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Startpage" >

    <TextView
        android:id="@+id/aboutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/distanceoptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disatance" />

        <LinearLayout
            android:id="@+id/distanceoption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/distance_walk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/walk" />

            <Button
                android:id="@+id/distance_bike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bike" />

            <Button
                android:id="@+id/distance_drive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drive" />

            <Button
                android:id="@+id/distance_any"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/any" />
        </LinearLayout>

        <TextView
            android:id="@+id/priceoptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priceText" />

        <LinearLayout
            android:id="@+id/priceoption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            
            <!-- We may need to cut the price option.  The v1.0 yelp api doesn't support thsi as a search parameter that I can find -->

            <Button
                android:id="@+id/priceoption_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onedollar" />

            <Button
                android:id="@+id/priceoption_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twodollar" />

            <Button
                android:id="@+id/priceoption_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/threedollar" />

            <Button
                android:id="@+id/priceoption_any"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/any" />
        </LinearLayout>
    </LinearLayout>

    <CheckBox
        android:id="@+id/opennow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="34dp"
        android:text="@string/onlyOpen" />

    <Button
        android:id="@+id/findit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/opennow"
        android:layout_marginTop="31dp"
        android:text="@string/findit" />

</RelativeLayout>