<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartOptionsActivity" >
<!-- 
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/redbg" /> -->
    <TextView
        android:id="@+id/aboutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:layout_marginTop="34dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/distanceoption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ToggleButton
                android:id="@+id/distance_walk"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:background="@drawable/walkbtn"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:tag="walk"
                android:textOff=""
                android:textOn="" />

            <ToggleButton
                android:id="@+id/distance_bike"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:background="@drawable/bikebtn"
                android:tag="bike"
                android:textOff=""
                android:textOn="" />

            <ToggleButton
                android:id="@+id/distance_drive"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:background="@drawable/drivebtn"
                android:tag="drive"
                android:textOff=""
                android:textOn="" />

            <ToggleButton
                android:id="@+id/distance_any"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:background="@drawable/anybtn"
                android:tag="any"
                android:textOff=""
                android:textOn="" />
        </LinearLayout>

        <!--
    We may need to cut the price option.  The v1.0 yelp api doesn't support thsi as a search parameter that I can find :
    now they are fake btns
-->
        <TextView
            android:id="@+id/priceoptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
            android:text="@string/priceText" />

        <LinearLayout
            android:id="@+id/priceoption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            

            <ToggleButton
                android:id="@+id/priceoption_1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:background="@drawable/onedrbtn"
                android:tag="any"
                android:textOff=""
                android:textOn="" />

            <ToggleButton
                android:id="@+id/priceoption_2"
               android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:background="@drawable/twodrbtn"
                android:tag="any"
                android:textOff=""
                android:textOn="" />

            <ToggleButton
                android:id="@+id/priceoption_3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:background="@drawable/threedrbtn"
                android:tag="any"
                android:textOff=""
                android:textOn="" />

            <ToggleButton
                android:id="@+id/priceoption_4"
               android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:background="@drawable/fourdrbtn"
                android:tag="any"
                android:textOff=""
                android:textOn="" />

    </LinearLayout>
        

        <CheckBox
            android:id="@+id/opennow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:minHeight="15dp"
            android:minWidth="15dp"
            android:checked="true"
            android:text="@string/onlyOpen"
            android:button="@drawable/switchbox"
            android:textColor="@color/white" />

        <!--
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayout2"
        -->

        <Button
            android:id="@+id/findit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
             android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:layout_marginTop="31dp"
            android:drawableRight="@drawable/yelplogo"
            android:text="@string/findit" />

        <!--
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/opennow"
        -->


        <!--
     <ImageButton
    android:id="@+id/ImageButton01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/windows_logo"
    android:src="@drawable/Yelp_logo" />
        -->
    </LinearLayout>
    <!--
  <ToggleButton 
        android:id="@+id/toggler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/check"  
        android:layout_margin="10dp"
        android:textOn=""
        android:textOff=""
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_centerVertical="true"/>
    -->

</RelativeLayout>